--- a/templates/f0016_2.html
+++ b/templates/f0016_2.html
@@ -14,7 +14,7 @@
 }
 </style>
 <body>
-    <form action="/edit_formato" method="post">
+    <form action="/edit_protocolo" method="post">
     <div><input name="id" type="hidden" value=""/></div>
     <div>Area:<input name="area" type="text" value=""/></div>
     <div>Sub Area:<input name="subarea" type="text" value=""/></div>
