--- a/templates/formato_list.html
+++ b/templates/formato_list.html
@@ -13,11 +13,13 @@
     {%if table %}
         {%for a in table %}
           <li>
-            <a href="/edit_formato?format={{ a }}">
-              <h3>{{a}}</h3>
+          {% with n1, n2 = a.split('_') %}
+            <a href="/list_protocolo?format={{n1}}">
+              <h3>{{n2}}</h3>
             </a>
-            <a href="/list_protocolo?format={{ a }}" class="split-button-custom" data-role="button" data-icon="gear" data-iconpos="notext">Borrar</a>
+            <a href="/edit_protocolo?format={{n1}}" class="split-button-custom" data-role="button" data-icon="gear" data-iconpos="notext">Borrar</a>
           </li>
+          {% endwith %} 
         {%endfor%}
     {%endif%}
     </ul>
