--- a/templates/forms/f0007.html
+++ b/templates/forms/f0007.html
@@ -441,15 +441,7 @@
         <input type="radio" name="f.e59" id="f.e59b" value="na">
         <label for="f.e59b">NA</label>
     </fieldset> 
-
-    <fieldset data-role="controlgroup" data-type="horizontal">
-        <legend>Juntas de aislamiento :</legend>
-        <input type="radio" name="f.e59" id="f.e59a" value="c"  checked="checked">
-        <label for="f.e59a">C</label>
-        <input type="radio" name="f.e59" id="f.e59b" value="na">
-        <label for="f.e59b">NA</label>
-    </fieldset> 
-
+    
     <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>Juntas de construcción:</legend>
         <input type="radio" name="f.e510" id="f.e510a" value="c"  checked="checked">
@@ -482,100 +474,39 @@
         <label for="e.f513b">NA</label>
     </fieldset> 
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>Diseño de Mezcla:</legend>
-        <input type="radio" name="f.e61" id="f.e61a" value="c"  checked="checked">
-        <label for="f.e61a">C</label>
-        <input type="radio" name="f.e61" id="f.e61b" value="na">
-        <label for="f.e61b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e61" id="f.e61a" value="">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>Tipo de concreto:</legend>
-        <input type="radio" name="f.e62" id="f.e62a" value="c"  checked="checked">
-        <label for="f.e62a">C</label>
-        <input type="radio" name="f.e62" id="f.e62b" value="na">
-        <label for="f.e62b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e62" id="f.e62a" value="">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>Resistencia F´c:</legend>
-        <input type="radio" name="f.e63" id="f.e63a" value="c"  checked="checked">
-        <label for="f.e63a">C</label>
-        <input type="radio" name="f.e63" id="f.e63b" value="na">
-        <label for="f.e63b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e63" id="f.e63a" value="c">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>TMN de agregado Pulg.:</legend>
-        <input type="radio" name="f.e64" id="f.e64a" value="c"  checked="checked">
-        <label for="f.e64a">C</label>
-        <input type="radio" name="f.e64" id="f.e64b" value="na">
-        <label for="f.e64b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e64" id="f.e64a" value="">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>Temperatura Min. - Máx.:</legend>
-        <input type="radio" name="f.e65" id="f.e65a" value="c"  checked="checked">
-        <label for="f.e65a">C</label>
-        <input type="radio" name="f.e65" id="f.e65b" value="na">
-        <label for="f.e65b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e65" id="f.e65a" value="">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>Asentamiento Slump:</legend>
-        <input type="radio" name="f.e66" id="f.e66a" value="c"  checked="checked">
-        <label for="f.e66a">C</label>
-        <input type="radio" name="f.e66" id="f.e66b" value="na">
-        <label for="f.e66b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e66" id="f.e66a" value="">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>Contenido de aire  %:</legend>
-        <input type="radio" name="f.e67" id="f.e67a" value="c"  checked="checked">
-        <label for="f.e67a">C</label>
-        <input type="radio" name="f.e67" id="f.e67b" value="na">
-        <label for="f.e67b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e67" id="f.e67a" value="">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>Aditivos:</legend>
-        <input type="radio" name="f.e68" id="f.e68a" value="c"  checked="checked">
-        <label for="f.e68a">C</label>
-        <input type="radio" name="f.e68" id="f.e68b" value="na">
-        <label for="f.e68b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e68" id="f.e68a" value="">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>Volumen M3:</legend>
-        <input type="radio" name="f.e69" id="f.e69a" value="c"  checked="checked">
-        <label for="f.e69a">C</label>
-        <input type="radio" name="f.e69" id="f.e69b" value="na">
-        <label for="f.e69b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e69" id="f.e69a" value="">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>No. de probetas /Juego:</legend>
-        <input type="radio" name="f.e610" id="f.e610a" value="c"  checked="checked">
-        <label for="f.e610a">C</label>
-        <input type="radio" name="f.e610" id="f.e610b" value="na">
-        <label for="f.e610b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e610" id="f.e610a" value="">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>No. Juegos requeridos:</legend>
-        <input type="radio" name="f.e611" id="f.e611a" value="c"  checked="checked">
-        <label for="f.e611a">C</label>
-        <input type="radio" name="f.e611" id="f.e611b" value="na">
-        <label for="f.e611b">NA</label>
-    </fieldset> 
+        <input type="text" name="f.e611" id="f.e611a" value="">
 
-    <fieldset data-role="controlgroup" data-type="horizontal">
         <legend>Otros:</legend>
-        <input type="radio" name="f.e612" id="f.e612a" value="c"  checked="checked">
-        <label for="f.e612a">C</label>
-        <input type="radio" name="f.e612" id="f.e612b" value="na">
-        <label for="f.e612b">NA</label>
-    </fieldset> 
-
+        <input type="text" name="f.e612" id="f.e612a" value="">
 {% endblock %}
