--- a/templates/forms/main_template.html
+++ b/templates/forms/main_template.html
@@ -6,6 +6,11 @@
       <link rel = "stylesheet" href = "https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
       <script src = "https://code.jquery.com/jquery-1.11.3.min.js"></script>
       <script src = "https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+      <script type="text/javascript">
+      $(document).ready(function() {
+
+       });
+      </script>
 </head>
 <style type='text/css'>
 .active
@@ -16,21 +21,26 @@
 <body>
     <form action="/edit_protocolo" method="post">
     <div><input name="id" type="hidden" value=""/></div>
-    <div>Area:<input name="area" type="text" value=""/></div>
-    <div>Sub Area:<input name="subarea" type="text" value=""/></div>
+    <div><input name="area" type="hidden" value=""/></div>
+    <div><input name="subarea" type="hidden" value=""/></div>
     <div id="inputs">Ubicacion
     <input id="inset-autocomplete-input" name="ubicacion" data-type="search" placeholder="Buscar area...">
         <ul id="autocomplete" data-role="listview" data-inset="true" data-filter="true" data-filter-reveal="true" data-input="#inset-autocomplete-input" >
     </div>
     <div>Elemento:<input name="elemento" type="text" value=""/></div>
     <div>Fecha:<input name="fecha" type="date" value=""/></div>
-    <div id="planoinputs">Plano:<input id="planoinset-autocomplete-input" name="plano" data-type="search" placeholder="Buscar planos..."/>
+    <div id="planoinputs">Planos:<input id="planoinset-autocomplete-input" name="plan" placeholder="Add new plano" data-type="search" placeholder="Buscar planos..."/>
         <ul id="planoautocomplete" data-role="listview" data-inset="true" data-filter="true" data-filter-reveal="true" data-input="#planoinset-autocomplete-input" >
     </div>
+    <div id="inputsadd">
+    <input type="button" value="Add" id="addContribution"/>
+        <ul data-role="listview" id="contributionList" data-split-icon="delete" data-split-theme="d"></ul>
+    </div>
+    <input id="plano" name="plano" type="hidden" value=""/>
     
     {% block content %}{% endblock %}
-      
-    <div>Observaciones:<input id="result" name="observacion" type="text" value=""/></div>
+    
+    <div>Observaciones:<input id="observacion" name="observacion" type="text" value=""/></div>
     <input type="submit" value="Guardar" />
     </form>
 <script type=text/javascript>
@@ -83,6 +93,24 @@
     $( "#planoinset-autocomplete-input" ).keypress(function( event ) {
         $("#planoautocomplete").attr("hidden",false);
     });
+    
+    $("#addContribution").on('mousedown touchstart', function(){
+    var newAmount = $('#planoinset-autocomplete-input').val();
+    if(newAmount != '') {
+        $('#contributionList').append('<li><a>' + newAmount + '</a><a class="deleteMe"></a></li>').listview('refresh');
+        var column1RelArray = $('#contributionList').text();
+        $('#plano').val(column1RelArray);
+        $('#planoinset-autocomplete-input').val('');
+        } else {
+    }
+    $(".deleteMe").on('click', function (){
+        $(this).parent().remove();
+        $('#contributionList').listview('refresh');
+    });    
+    });
+</script>
+<script type=text/javascript>
+ {% block script %}{% endblock %}
 </script>
 </body>
 </html>
