--- a/templates/forms/f0006.html
+++ b/templates/forms/f0006.html
@@ -27,7 +27,7 @@
     </fieldset>  
     
         <label for="slider-10">Cilindros de Muestra:</label>
-        <input type="range" name="cilindros_muestra" id="idcilindros_muestra" min="1" max="10" step="6" value="1">
+        <input type="range" name="cilindros_muestra" id="idcilindros_muestra" min="0" max="10" step="1" value="1">
         
         <label for="slider-10">Muestras:</label>
         <input type="range" name="muestras" id="idmuestras" min="0" max="20" step="1" value="1">
@@ -50,7 +50,7 @@
         <input type="time" data-clear-btn="false" name="start" id="idstart" value="">
     </fieldset>
         <fieldset data-role="controlgroup" data-type="horizontal">
-        <label for="time-1">Start: data-clear-btn="false"</label>
+        <label for="time-1">Finish: data-clear-btn="false"</label>
         <input type="time" data-clear-btn="false" name="finish" id="idfinish" value="">
     </fieldset>
     <fieldset data-role="controlgroup" data-type="horizontal">
